fix(menu): allow text wrapping in menu items
Allows for the text inside menu items to wrap, instead of having it be truncated. The text was being truncated as a limitation on `mat-select` and `mat-autocomplete`, however we don't have the same limitation on `mat-menu`.

--- a/src/material/core/style/_menu-common.scss
+++ b/src/material/core/style/_menu-common.scss
@@ -21,14 +21,22 @@ $mat-menu-icon-margin: 16px !default;
   -webkit-overflow-scrolling: touch;   // for momentum scroll on mobile
 }
 
-@mixin mat-menu-item-base() {
-  @include mat-truncate-line();
+@mixin mat-menu-item-base(
+  $display: block,
+  $truncate: true,
+  $height: $mat-menu-item-height,
+  $line-height: $height) {
+
+  @if $truncate {
+    @include mat-truncate-line();
+  }
 
   // Needs to be a block for the ellipsis to work.
-  display: block;
-  line-height: $mat-menu-item-height;
-  height: $mat-menu-item-height;
+  display: $display;
+  height: $height;
+  line-height: $line-height;
   padding: 0 $mat-menu-side-padding;
+  box-sizing: border-box;
 
   text-align: left;
   text-decoration: none;   // necessary to reset anchor tags
